--- a/templates/rtsp_cam.html
+++ b/templates/rtsp_cam.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
     <script src="{{ url_for('static', filename='js/spinner.js')}}"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css') }}">
-    <link rel="stylesheet" href="{{url_for('static', filename='css/page.css') }}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/page_ssh_and_rtsp.css') }}">
   <title>RTSP</title>
 </head>
 <body>
