update ssh, updated background path, return stdout instead of result

--- a/static/css/page_ssh_and_rtsp.css
+++ b/static/css/page_ssh_and_rtsp.css
@@ -27,7 +27,7 @@ form {
 }
 
 body {
-    background-image: url("/static/img/background.jpg");
+    background-image: url("../img/background.jpg");
     font-family: sans-serif;
     padding: 20px;
 }
