ping was updated to clarify this is server-side only,implemented js latency tool, created button on index, created latency tool route

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -65,6 +65,10 @@ body {
     color: white;
     font-family: monospace;
 }
+#latency-output {
+    color: white;
+    font-family: monospace;
+}
 .tool-button {
     font-size: 15px;
     border: azure;
