--- a/templates/latency.html
+++ b/templates/latency.html
@@ -10,7 +10,9 @@
 </head>
 <body>
 <h2> Latency Tool </h2>
-<i>Enter an IP address and rec</i>
+<i>Enter an IP address to see latency.<br>
+    Please note the recipient needs to have https enabled.
+</i>
 
 <form id="latency-form" onsubmit="clientPing(event); return false;">
     Enter IP Address: <input name="latency-input" >
