--- a/templates/index.html
+++ b/templates/index.html
@@ -2,20 +2,26 @@
 
 <html lang="en">
 <head>
-    <title>IP Browser tools</title>
     <meta charset="UTF-8">
+    <meta name="author" content="Mike DeFilippi"
+    <meta name = "description" content = "This page contains
+    tools for IT professionals designed to run lean and mean">
+    <title>IP Browser tools</title>
     <link rel="stylesheet" href="{{url_for('static', filename='css/index.css') }}">
+    <link rel="icon" href="{{url_for('static', filename='img/smiley.png') }}">
     <script src="{{ url_for('static', filename='js/animate_button.js')}}"></script>
 
 </head>
 <body>
 <h2> Welcome to IP Tools </h2>
-<h4> By Mike D </h4>
+<img src="{{url_for('static', filename='img/smiley.png') }}" alt="smiley" width="128" height="128">
+<h5> By Mike D </h5>
 
-<a href="/ping" class="tool-button">Ping</a>
-<a href="/geo" class="tool-button">GeoLocation</a>
+<a href="/ping" class="tool-button">Server Connection Test</a>
+<a href="/geo" class="tool-button">Geolocator Tool</a>
 <a href="/trace" class="tool-button">Trace Route</a>
 <a href="/mac" class="tool-button">MAC Lookup</a>
+<a href="/latency" class="tool-button">Latency Checker</a>
 <a href="/deepgeo" class="tool-button">Deep Search</a>
 <a href="/route_table" class="tool-button">Port Checker</a>
 <a href="/public" class="tool-button">Grab Public IP</a>
