--- a/templates/ping.html
+++ b/templates/ping.html
@@ -4,17 +4,20 @@
 
 <head>
     <meta charset="UTF-8"/>
-    <title>Ping Tool</title>
+    <title>Server Ping Tool</title>
     <script src="{{ url_for('static', filename='js/render_json.js')}}"></script>
     <script src="{{ url_for('static', filename='js/spinner.js')}}"></script>
-{#        <script src="{{ url_for('static', filename='js/animate_button.js')}}"></script>#}
     <link rel="stylesheet" href="{{url_for('static', filename='css/page.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css') }}">
 </head>
 
 <body>
-<h2> Ping </h2>
-<i> Please enter an IP address </i>
+<h2> Server Side Ping </h2>
+<i> Enter an IP address.<br>
+    Please note this checks connection from the server<br>
+    to the entered IP. To check client side connections <br>
+    please run the latency test.
+</i>
 <br><br>
 
 {#Enter an IP address > show spinner on button click#}
