updated contact me, get public ip returns WAY more info, groundwork for cloudflare dashboard API

--- a/static/css/page.css
+++ b/static/css/page.css
@@ -2,6 +2,10 @@ h2 {
     color: white;
     font-family: monospace;
 }
+h3 {
+    color: white;
+    font-family: monospace;
+}
 
 h4{
     color: white;
