--- a/templates/deep.html
+++ b/templates/deep.html
@@ -5,6 +5,7 @@
     <title>Deep IP Search</title>
     <script src="{{ url_for('static', filename='js/render_json.js')}}"></script>
     <script src="{{ url_for('static', filename='js/spinner.js')}}"></script>
+    <link rel="icon" href="{{url_for('static', filename='img/smiley.png') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/page.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css') }}">
 </head>
