--- a/templates/index.html
+++ b/templates/index.html
@@ -24,6 +24,7 @@
 <a href="/deepgeo" class="tool-button">Deep Search</a>
 <a href="/route_table" class="tool-button">Port Checker</a>
 <a href="/public" class="tool-button">Grab Public IP</a>
+<a href="/contact_me" class="tool-button">Contact me!</a>
 
 
 </body>
