--- a/templates/route_table.html
+++ b/templates/route_table.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/page.css') }}">
     <title>Port checker</title>
+    <link rel="icon" href="{{url_for('static', filename='img/smiley.png') }}">
 </head>
 
 <h2> Port check tool </h2>
