--- a/templates/rtsp_cam.html
+++ b/templates/rtsp_cam.html
@@ -5,6 +5,7 @@
     <script src="{{ url_for('static', filename='js/spinner.js')}}"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/page_ssh_and_rtsp.css') }}">
+    <link rel="icon" href="{{url_for('static', filename='img/smiley.png') }}">
   <title>RTSP</title>
 </head>
 <body>
