--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://unpkg.com/xterm/css/xterm.css">
 
 </head>
-<h3>
+
 <h2> Contact me </h2>
 <i>Hello Friends!</i>
 
@@ -20,7 +20,11 @@ If you have any questions, please feel free to email me.<br>
 <br>Contact me at fingerprince333@gmail.com.<br>
 <br>Any ideas or bugs encountered would be great to hear about.<br>
 <br>I use this as a way to assist with my day-to-day work.<br>
-<br>If it helps you, let me know!<br>
+<br>If it helps you, let me know.<br>
+<br>Thanks for visiting!<br>
+<br> Mike D (admin)<br>
+    <img src="{{url_for('static', filename='img/smiley.png') }}" alt="smiley" width="128" height="128">
+
 
 </h3>
 
