--- a/templates/ssh.html
+++ b/templates/ssh.html
@@ -7,6 +7,7 @@
     <script src="{{ url_for('static', filename='js/spinner.js')}}"></script>
     <link rel="stylesheet" href="{{url_for('static', filename='css/page_ssh_and_rtsp.css') }}">
     <link rel="stylesheet" href="{{url_for('static', filename='css/styles.css') }}">
+    <link rel="icon" href="{{url_for('static', filename='img/smiley.png') }}">
 </head>
 <h2> SSH </h2>
 <br>
