--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -3,13 +3,16 @@
     display: none;
     position: relative;
     border: 4px solid #f3f3f3;
-    border-top: 4px solid #3498db;
-    border-bottom: 4px solid #3498db;
+    border-top: 4px solid #1e1e1e;
+    border-bottom: 4px solid #090909;
     border-radius: 50%;
     width: 34px;
     height: 34px;
     animation: spin 0.8s linear infinite;
+    box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
     margin-left: 10px auto;
+
+
 }
 
 @keyframes spin {
