--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -15,9 +15,9 @@
 <h2> Contact me </h2>
 <i>Hello Friends!</i>
 
-<h3>
+<h4>
 If you have any questions, please feel free to email me.<br>
-<br>Contact me at fingerprince333@gmail.com.<br>
+<br>Contact me at iptechtoolsnyc@gmail.com.<br>
 <br>Any ideas or bugs encountered would be great to hear about.<br>
 <br>I use this as a way to assist with my day-to-day work.<br>
 <br>If it helps you, let me know.<br>
@@ -26,7 +26,7 @@ If you have any questions, please feel free to email me.<br>
     <img src="{{url_for('static', filename='img/smiley.png') }}" alt="smiley" width="128" height="128">
 
 
-</h3>
+</h4>
 
 <form >
 </form>
