--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,9 @@
-
+img {
+    width: 250px;
+    height: auto;
+        padding-left: 20px;
+    padding-right: 45px;
+}
 h2 {
     color: white;
     font-family: monospace;
@@ -14,15 +19,36 @@ h5{
     padding-left: 40px;
     padding-right: 45px;
 }
-img{
-    padding-left: 20px;
+input {
+
+    color: white;
+    font-family: monospace;
+    padding-left: 40px;
     padding-right: 45px;
+}
+img{
+
+}
+html, body {
+    height: 100%;
+}
+form {
+    font-family: monospace;
+    display: flex;
+    align-items: center;
+    color: white;
+    width: 150%;
+    gap: 10px
 }
 body {
     /*background-image: url("/static/img/background.jpg");*/
     background-color: black;
     background-image: radial-gradient(rgba(33, 104, 234, 0.75), black 120%);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment: fixed;
     /*position: absolute;*/
+    font-size: 20px;
     top: 10px;
     left: 16px;
     max-width: 100%;
@@ -31,7 +57,6 @@ body {
     padding: 20px;
     color: white;
     font-family: "Chicago", monospace;
-    /*font: 1.1rem Inconsolata, monospace;*/
     text-shadow: 0 0 5px #C8C8C8;
 }
 body::before {
@@ -46,8 +71,8 @@ body::before {
     height: 100vh;
     background: repeating-linear-gradient(
     0deg,
-    rgba(0, 0, 0, 0.15),
-    rgba(0, 0, 0, 0.15) 1px,
+    rgba(0, 0, 0, 0.2),
+    rgba(0, 0, 0, 0.2) 1px,
     transparent 1px,
     transparent 2px
     );
@@ -55,7 +80,7 @@ body::before {
 
 .tool-button {
     font-family: monospace;
-    font-size: 12px;
+    font-size: 20px;
     border: azure;
     border-radius: 15px;
     background-color: #174292;
