--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -6,11 +6,11 @@
     border-top: 4px solid #1e1e1e;
     border-bottom: 4px solid #090909;
     border-radius: 50%;
-    width: 34px;
-    height: 34px;
+    width: 50px;
+    height: 50px;
     animation: spin 0.8s linear infinite;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.7);
-    margin-left: 10px auto;
+    margin-left: 10px;
 
 
 }
