--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -16,11 +16,8 @@
 <i>Hello Friends!</i>
 
 <h4>
-If you have any questions, please feel free to email me.<br>
+For bugs, insults or compliments,<br>
 <br>Contact me at iptechtoolsnyc@gmail.com.<br>
-<br>Any ideas or bugs encountered would be great to hear about.<br>
-<br>I use this as a way to assist with my day-to-day work.<br>
-<br>If it helps you, let me know.<br>
 <br>Thanks for visiting!<br>
 <br> Mike D (admin)<br>
     <img src="{{url_for('static', filename='img/smiley.png') }}" alt="smiley" width="128" height="128">
