--- a/templates/ping.html
+++ b/templates/ping.html
@@ -23,7 +23,7 @@
 
 {#Enter an IP address > show spinner on button click#}
 <form method="POST" class = 'ping-output' onsubmit="showSpinner(); renderPingOutput(); return true;">
-    Enter IP Address: <input name="ip">
+    Enter IP Address: <input name="ip" class="ip">
     {#Tool button class used to style buttons in css#}
     <button type="submit"  class="tool-button">Lookup</button>
 <!---------- spinner bar stuff --------->   
