--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,40 +1,32 @@
-/*.dash-rotator-container {*/
-/*    display: flex;*/
-/*    justify-content: flex-end; !* right side *!*/
-/*    align-items: center;       !* vertical center *!*/
-/*    width: 100%;*/
-/*    height: 200px;             !* adjust to taste *!*/
-/*}*/
-.hero-stack {
+.main-row {
   display: flex;
-  flex-direction: column;   /* title -> row -> buttons */
-  gap: 20px;
+  align-items: flex-start;
+  gap: 40px;              /* space between buttons and chart */
+  padding: 20px;
 }
 
-/* row with smiley + chart */
 .dash-row {
+
   display: flex;
-  align-items: center;      /* vertical align within the row */
+  align-items: flex-start;      /* vertical align within the row */
   gap: 100px;
+    justify-content: flex-end;
+
 }
 #dash-rotator {
     transition: opacity 250ms ease-in-out;
-    max-width: 420px;
-    border-radius: 12px;
+    width: 900px;
+    height: auto;
+    border-radius: 20px;
 }
 .smiley {
-  width: 90px;              /* tweak */
-  height: auto;
+    max-height: 180px;
+    max-width: 180px;
+    width: auto;              /* tweak */
+    height: auto;
+    margin-right:100px;
 }
 
-
-
-/*.smiley-container {*/
-/*    height: auto;*/
-/*    width: auto;*/
-/*    padding-left: 20px;*/
-/*    padding-right: 45px;*/
-/*}*/
 h2 {
     color: white;
     font-family: monospace;
@@ -85,7 +77,7 @@ body {
     max-width: 100%;
     height: 100vh;
     /*font-family: monospace;*/
-    padding: 20px;
+    padding: 45px;
     color: white;
     font-family: "Chicago", monospace;
     text-shadow: 0 0 5px #C8C8C8;
@@ -108,9 +100,14 @@ body::before {
         transparent 4px
         );
 }
-
+.button-menu{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start; /* prevents stretching */
+}
 .tool-button {
     font-family: monospace;
+    width: 200px;
     font-size: 20px;
     border: azure;
     border-radius: 15px;
@@ -124,7 +121,8 @@ body::before {
     color: white;
     padding: 10px 20px;
     text-decoration: none;
-    display: inline-block;
+    display: flex;
+    flex-direction: column;
     margin: 5px;
     transition: transform 150ms ease, background 200ms ease, box-shadow 200ms ease;
 }
