--- a/templates/ping.html
+++ b/templates/ping.html
@@ -15,8 +15,8 @@
 <body>
 <h2> Server Side Ping </h2>
 <i> Enter an IP address.<br>
-    Please note this checks connection from the server<br>
-    to the entered IP. To check client side connections <br>
+    Please note this checks connection from the Linux server<br>
+    this is hosted on. To check client side speed issues <br>
     please run the latency test.
 </i>
 <br><br>
